test(backend): format test